--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>io.solit.maven</groupId>
     <artifactId>cat-maven-plugin</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.0-RC1</version>
     <packaging>maven-plugin</packaging>
     
     <properties>
