--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>io.solit.maven</groupId>
     <artifactId>cat-maven-plugin</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     
     <properties>
@@ -36,7 +36,7 @@
     <scm>
         <url>https://github.com/ginmon/cat-maven-plugin</url>
         <connection>scm:git:https://github.com/ginmon/cat-maven-plugin.git</connection>
-        <developerConnection>scm:git:ssh://git@github.com:ginmon/cat-maven-plugin.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:ginmon/cat-maven-plugin.git</developerConnection>
     </scm>
 
     <distributionManagement>
