--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>io.solit.maven</groupId>
     <artifactId>cat-maven-plugin</artifactId>
-    <version>1.1.3</version>
+    <version>1.1.4-SNAPSHOT</version>
     <packaging>maven-plugin</packaging>
     
     <properties>
@@ -35,7 +35,7 @@
         <url>https://github.com/ginmon/cat-maven-plugin</url>
         <connection>scm:git:https://github.com/ginmon/cat-maven-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:ginmon/cat-maven-plugin.git</developerConnection>
-      <tag>cat-maven-plugin-1.1.3</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <distributionManagement>
